--- a/724- main page/index.html
+++ b/724- main page/index.html
@@ -106,7 +106,7 @@
             </div>
          
         </div>
-              
+         </div>      
  
 
         <!-- Latest compiled and minified JavaScript -->
