--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
       
        <h3>Sub pages</h3>
-      <p><a href="mainpage1" class="btn">Site page</a></p>
+      <p><a href="zvtest1/mainpage1" class="btn">Site page</a></p>
  
     </section>
 
