--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    -->
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">Portfolio</h1>
-      <h2 class="project-tagline"></h2>
+    <section>
+      <h1>Portfolio</h1>
+      <h2>The amazing collection of my greatest creative work</h2>
       
        <h3>Sub pages</h3>
       <p><a href="zvtest1/mainpage1" class="btn">Site page</a></p>
