--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>The amazing collection of my greatest creative work</h2>
       
        <h3>Sub pages</h3>
-      <p><a href="zvtest1/mainpage1" class="btn">Site page</a></p>
+      <p><a href="zvtest1/mainpage1" class="btn">Main Page</a></p>
  
     </section>
 
