--- a/zvtest1/mainpage1.html
+++ b/zvtest1/mainpage1.html
@@ -38,7 +38,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Auto</a></li>
+              <li><a href="autospage.html">Auto</a></li>
               <li><a href="#">House</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Organize <span class="caret"></span></a>
@@ -66,10 +66,10 @@
         <h3>Keztra Home</h3>
 
         <ul class="btn-group" role="group"> 	 
-            <button type="button" class="btn btn-default"><a href="http://zvanti.herokuapp.com/calentries">Calendar</a></button>
-            <button type="button" class="btn btn-default"><a href="http://zvanti.herokuapp.com/passentries">Passwords</a></button>
-            <button type="button" class="btn btn-default"><a href="http://zvanti.herokuapp.com/contacts">Contacts</a></button>
-            <button type="button" class="btn btn-default"><a href="http://zvanti.herokuapp.com/receipts">Receipts</a></button>
+            <button type="button" class="btn btn-default"><a href="calentries">Calendar</a></button>
+            <button type="button" class="btn btn-default"><a href="passentries">Passwords</a></button>
+            <button type="button" class="btn btn-default"><a href="contacts">Contacts</a></button>
+            <button type="button" class="btn btn-default"><a href="receipts">Receipts</a></button>
 
         </ul>
         </div>
@@ -87,22 +87,22 @@
 				  </thead>
 				  <tbody>
 					  <tr>
-						 <td>Barry</td>
+						 <td>Joe</td>
 						 <td> <a class="button radius" href="/calentries/277">Corolla Smog Check</a> </td>       
 						 <td>26/July/2016</td>
 					  </tr>
 					  <tr>
-						 <td>Barry</td>
+						 <td>Joe</td>
 						 <td> <a class="button radius" href="/calentries/190">Bernice Major mtce</a> </td>       
 						 <td>16/August/2016</td>
 					  </tr>
 					  <tr>
-						 <td>Barry</td>
+						 <td>Joe</td>
 						 <td> <a class="button radius" href="/calentries/910">Squaw dog day</a> </td>       
 						 <td>27/August/2016</td>
 					  </tr>
 					  <tr>
-						 <td>Barry</td>
+						 <td>Joe</td>
 						 <td> <a class="button radius" href="/calentries/139">Bertie Major Service</a> </td>       
 						 <td> 6/December/2016</td>
 					  </tr>
