--- a/zvtest1/autospage.html
+++ b/zvtest1/autospage.html
@@ -33,11 +33,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="mainpage.html">Keztra</a>
+            <a class="navbar-brand" href="mainpage1.html">Zvanti</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="mainpage1.html">Home</a></li>
               <li><a href="autospage.html">Auto</a></li>
               <li><a href="#">House</a></li>
               <li class="dropdown">
