--- a/zvtest1/autos/1/index.html
+++ b/zvtest1/autos/1/index.html
@@ -33,12 +33,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/../../mainpage1.html">Keztra</a>
+            <a class="navbar-brand" href="/../mainpage1.html">Keztra</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/../../mainpage1">Home</a></li>
-              <li><a href="/../../autospage.html">Auto</a></li>
+              <li class="active"><a href="/../mainpage1">Home</a></li>
+              <li><a href="/../autospage.html">Auto</a></li>
               <li><a href="#">House</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Organize <span class="caret"></span></a>
