--- a/zvtest1/autos/1/index.html
+++ b/zvtest1/autos/1/index.html
@@ -70,7 +70,7 @@
                   <div class="panel-heading">Bernice</div>
                   <div class="panel-body"> 
                     <ul class="btn-group" role="group"> 	 
-                        <button type="button" class="btn btn-default"><a href="/../../autospage.html">Back to Cars</a></button>
+                        <button type="button" class="btn btn-default"><a href="../../autospage.html">Back to Cars</a></button>
                         <button type="button" class="btn btn-default"><a href="automtceitems.html">Maintenance Schedule</a></button>
                         <button type="button" class="btn btn-default"><a href="autocompmtceitems.html">Completed Maintenance</a></button>
                     </ul>
