--- a/zvtest1/autospage.html
+++ b/zvtest1/autospage.html
@@ -70,14 +70,13 @@
                   <div class="panel-heading">My Cars</div>
                   <div class="panel-body"> 
                     <ul class="btn-group" role="group"> 	
-                        <button type="button" class="btn btn-default"><a href="autos/new">Add a car</a></button>
-                        <button type="button" class="btn btn-default"><a href=""> </a></button>
                         <button type="button" class="btn btn-default"><a href="autos/1/index.html">Bernice</a></button> 
                         <button type="button" class="btn btn-default"><a href="autos/2/index.html">Bertie</a></button>	 
                         <button type="button" class="btn btn-default"><a href="autos/3/index.html">Corolla</a></button>
                     </ul>
 
                   </div>
+                  <div class="panel-footer"><button type="button" class="btn btn-default"><a href="autos/new">Add a car</a></button></div>
                 </div>
 
             </div>
