--- a/zvtest1/autos/1/index.html
+++ b/zvtest1/autos/1/index.html
@@ -70,13 +70,35 @@
                   <div class="panel-heading">Bernice</div>
                   <div class="panel-body"> 
                     <ul class="btn-group" role="group"> 	 
-                        <button type="button" class="btn btn-default"><a href="../../autospage.html">Back to Cars</a></button>
                         <button type="button" class="btn btn-default"><a href="automtceitems.html">Maintenance Schedule</a></button>
                         <button type="button" class="btn btn-default"><a href="autocompmtceitems.html">Completed Maintenance</a></button>
                     </ul>
-                      
+                      <dl class="dl-horizontal">
+	  <dt><strong>Vin:</strong></dt>
+	  <dd>. </dd>
+	  <dt><strong>Purchased:</strong></dt>
+	  <dd>12/August/2012. </dd>
+	  <dt><strong>Wherepurchased:</strong></dt>
+	  <dd>Capitol Mazda. </dd>
+	  <dt><strong>Cost:</strong></dt>
+	  <dd>. </dd>
+	  <dt><strong>Comments:</strong></dt>
+	  <dd>. </dd>
+	  	 	<dt><strong>Contact - company, phone, address :</strong></dt>
+  	<dd>Capitol Mazda,  
+  	408.448.2277,  
+  	980 Capitol Expressway Auto Mall
+San Jose,	CA	95136
+Service	866-629-3273. </dd>
+
+		 	<dt><strong> Insurance - policy :</strong></dt>
+  	<dd>Auto Bernice ,  275 8176-B13-05A. </dd>
+
+	</dl>
 
                   </div>
+                  
+                   <div class="panel-footer"><button type="button" class="btn btn-default"><a href="../../autospage.html">Back to Cars</a></button></div>
                 </div>
 
             </div>
