--- a/zvtest1/autospage.html
+++ b/zvtest1/autospage.html
@@ -83,20 +83,51 @@
          </div>
         <div class= "row"> 
             <div class="col-sm-12 col-md-6 col-lg-6">
-                  <h3>Select tab to show info</h3>
+                <h3>Select tab to show info</h3>
                     <ul class="nav nav-tabs">
-                        <li role="presentation" class="active"><a href="http://zvanti.herokuapp.com/autos#panel1">Calendar</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel2">Tasks</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel3">Passwords</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel4">Contacts</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel5">Notes</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel6">Receipts</a></li>
-                        <li role="presentation"><a href="http://zvanti.herokuapp.com/autos#panel7">Docs</a></li>
+                        <li class="active"><a data-toggle="tab" href="#menu1">Calendar</a></li>
+                        <li><a data-toggle="tab" href="#menu2">Tasks</a></li>
+                        <li><a data-toggle="tab" href="#menu3">Passwords</a></li>
+                        <li><a data-toggle="tab" href="#menu4">Contacts</a></li>
+                        <li><a data-toggle="tab" href="#menu5">Notes</a></li>
+                        <li><a data-toggle="tab" href="#menu6">Receipts</a></li>
+                        <li><a data-toggle="tab" href="#menu7">Docs</a></li>
                     </ul>
-
+                
+                <div class="tab-content">
+                    <div id="menu1" class="tab-pane fade">
+                      <h3>Calendar</h3>
+                      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div id="menu2" class="tab-pane fade">
+                      <h3>Tasks</h3>
+                      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                    </div>
+                    <div id="menu3" class="tab-pane fade">
+                      <h3>Passwords</h3>
+                      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </div>
+                    <div id="menu4" class="tab-pane fade">
+                      <h3>Contacts</h3>
+                      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </div>
+                    <div id="menu5" class="tab-pane fade">
+                      <h3>Notes</h3>
+                      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </div>
+                    <div id="menu6" class="tab-pane fade">
+                      <h3>Receipts</h3>
+                      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </div>
+                    <div id="menu7" class="tab-pane fade">
+                      <h3>Docs</h3>
+                      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    </div>
+              </div>
             </div>
-        </div>
 
+
+        </div>
 
     </div>
               
