--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       
        <h3>Sub pages</h3>
       <p><a href="zvtest1/mainpage1" class="btn">Main Page</a></p>
+      
+      <p><a href="My Lacemarket/index.html" class="btn">Lace Market</a></p>
  
     </section>
 
