--- a/My Lacemarket/index.html
+++ b/My Lacemarket/index.html
@@ -73,14 +73,14 @@
         <div class="col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">Title</div>
-            <div class="panel-body"><img src="https://d2ieorefj5ilau.cloudfront.net/uploads/production/000/216/803/thumb/tumblr_obyn57rs8W1v4w9y9o3_400.jpg?text=IMAGE" class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="http://d2ieorefj5ilau.cloudfront.net/uploads/production/000/205/050/thumb/690791-215-2016-07-18755658.jpg?text=IMAGE" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Description</div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">Title</div>
-            <div class="panel-body"><img src="https://d2ieorefj5ilau.cloudfront.net/uploads/production/000/216/803/thumb/tumblr_obyn57rs8W1v4w9y9o3_400.jpg?text=IMAGE"  class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="http://d2ieorefj5ilau.cloudfront.net/uploads/production/000/208/482/thumb/695515-640-2016-07-26544788.jpg?text=IMAGE"  class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Description</div>
           </div>
         </div>
@@ -90,21 +90,21 @@
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="panel panel-info">
             <div class="panel-heading">Title</div>
-            <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+            <div class="panel-body"><img src="http://d2ieorefj5ilau.cloudfront.net/uploads/production/000/156/742/thumb/587603-12624-2016-02-21967148.jpg?text=IMAGE" class="img-responsive"  alt="Image"></div>
             <div class="panel-footer">Description</div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-122"> 
           <div class="panel panel-info">
             <div class="panel-heading">Title</div>
-            <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+            <div class="panel-body"><img src="http://d2ieorefj5ilau.cloudfront.net/uploads/production/000/156/742/thumb/587603-12624-2016-02-21967148.jpg?text=IMAGE" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Description</div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">Title</div>
-            <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+            <div class="panel-body"><img src="http://d2ieorefj5ilau.cloudfront.net/uploads/production/000/187/365/thumb/659002-3588-2016-05-28289938.jpg?text=IMAGE" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Description</div>
           </div>
         </div>
@@ -130,9 +130,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!--    <script src="script.js"></script>    
-    
- Latest compiled and minified JavaScript
+    <script src="script.js"></script>    
+ <!-- 
+    Latest compiled and minified JavaScript
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
  -->
     
