--- a/My Lacemarket/index.html
+++ b/My Lacemarket/index.html
@@ -17,7 +17,7 @@
 <div class="page-header">
 <div class="container-fluid">
    <div class="row">
-	<img src="../images/lacemarketlogonew.png" class="img-responsive center-block">
+	<img src="../My Lacemarket/images/lacemarketlogonew.png" class="img-responsive center-block">
    </div>
 </div>
 </div>
@@ -108,21 +108,21 @@
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12">
           <div class="panel panel-info">
             <div class="panel-heading">Innocent World JSK</div>
-            <div class="panel-body"><img src="../images/img1.png"  class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img1.png"  class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Current Price: $105</div>
           </div>
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">Fox Feather JSK</div>
-            <div class="panel-body"><img src="../images/img2.png" class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img2.png" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Current Price: $89</div>
           </div>
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">AATP Set</div>
-            <div class="panel-body"><img src="../images/img3.png"  class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img3.png"  class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Current Price: $230</div>
           </div>
         </div>
@@ -132,21 +132,21 @@
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12">
           <div class="panel panel-info">
             <div class="panel-heading">AATP Bonnet</div>
-            <div class="panel-body"><img src="../images/img4.png" class="img-responsive"  alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img4.png" class="img-responsive"  alt="Image"></div>
             <div class="panel-footer">Current Price: $50</div>
           </div>
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">Angelic Pretty OP</div>
-            <div class="panel-body"><img src="../images/img5.png" class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img5.png" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Current Price: $250</div>
           </div>
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12"> 
           <div class="panel panel-info">
             <div class="panel-heading">R-Series Blouse</div>
-            <div class="panel-body"><img src="../images/img6.png" class="img-responsive"   alt="Image"></div>
+            <div class="panel-body"><img src="../My Lacemarket/images/img6.png" class="img-responsive"   alt="Image"></div>
             <div class="panel-footer">Current Price: $40</div>
           </div>
         </div>
