--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <p><a href="hssv/index.html" class="btn">Humane Society- Cat adoption</a></p>
       
       <p><a href="hssv_profile/index.html" class="btn">Humane Society- Cat profile</a></p>
+      
+      <p><a href="website/index.html" class="btn">Wetlands website layout</a></p>S
+
 
  
     </section>
