--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       <p><a href="hssv_profile/index.html" class="btn">Humane Society- Cat profile</a></p>
       
-      <p><a href="website/index.html" class="btn">Wetlands website layout</a></p>S
+      <p><a href="website/index.html" class="btn">Wetlands website layout</a></p>
 
 
  
