--- a/website/index.html
+++ b/website/index.html
@@ -62,7 +62,7 @@
     </nav>
 
     <!-- Image Background Page Header -->
-    <header class="business-header" "img-responsive">
+    <header class="business-header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
