--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <p><a href="hssv_profile/index.html" class="btn">Humane Society- Cat profile</a></p>
       
       <p><a href="website/index.html" class="btn">Wetlands website layout</a></p>
+      
+      <p><a href="sephora-site/index.html" class="btn">Sephora responsite layout</a></p>
 
 
  
