--- a/sephora-site/index.html
+++ b/sephora-site/index.html
@@ -24,9 +24,9 @@
 </head>
     
 <header><p>
-    <a href="#"><img src="images/truck.png"> Track Order </a>
-    <a href="#"><img src="images/location.png"> Find a Store </a>
-    <a href="#"><img src="images/flag.png"> US </a>
+    <a href="#"><img src="/images/truck.png"> Track Order </a>
+    <a href="#"><img src="/images/location.png"> Find a Store </a>
+    <a href="#"><img src="/images/flag.png"> US </a>
     </p></header>
     
 <body>
