--- a/main/index.html
+++ b/main/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/images/sephora.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="main/images/sephora.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Sephora</a>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/images/enviro.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="main/images/enviro.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Enviro</a>
