--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/svbc.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/svbc.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Silicon Valley Blind Center</a>
