--- a/main/index.html
+++ b/main/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/sephora.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/sephora.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Sephora</a>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/enviro.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/enviro.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Enviro</a>
@@ -75,7 +75,7 @@
           
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/educamps.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/educamps.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">EduCamps</a>
@@ -86,7 +86,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/lace.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/lace.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Lacemarket</a>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="main/images/hssv1.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/hssv1.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Humane Society</a>
