--- a/main/index.html
+++ b/main/index.html
@@ -38,7 +38,7 @@
             <a href="#"><img class="card-img-top" src="images/svbc.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="portfolio/svbc-site/index.html">Silicon Valley Blind Center</a>
+                <a href="https://github.com/mdevlin96/portfolio/svbc-site/index.html">Silicon Valley Blind Center</a>
               </h4>
               <p class="card-text">Redesigned website for SVBC to more concise, accessible, and responsive. Created in a team for Web Design course.</p>
             </div>
