--- a/main/index.html
+++ b/main/index.html
@@ -38,7 +38,7 @@
             <a href="#"><img class="card-img-top" src="images/svbc.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/svbc-site/index.html">Silicon Valley Blind Center</a>
+                <a href="https://mdevlin96.github.io/portfolio/svbc-site/index.html">Silicon Valley Blind Center</a>
               </h4>
               <p class="card-text">Redesigned website for SVBC to more concise, accessible, and responsive. Created in a team for Web Design course.</p>
             </div>
@@ -49,7 +49,7 @@
             <a href="#"><img class="card-img-top" src="images/sephora.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/sephora-site/index.html">Sephora</a>
+                <a href="https://mdevlin96.github.io/portfolio/sephora-site/index.html">Sephora</a>
               </h4>
               <p class="card-text">Redesigned Sephora landing page to be responsive and mobile friendly. Created independently for Web Design course.</p>
             </div>
@@ -60,7 +60,7 @@
             <a href="#"><img class="card-img-top" src="images/enviro.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/enviro/index.html">Enviro</a>
+                <a href="https://mdevlin96.github.io/portfolio/enviro/index.html">Enviro</a>
               </h4>
               <p class="card-text">Landing page for an environmental campaign focusing on wetlands preservation. Created for Graphic Arts course.</p>
             </div>
@@ -78,7 +78,7 @@
             <a href="#"><img class="card-img-top" src="images/educamps.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/educamps/index.html">EduCamps</a>
+                <a href="hhttps://mdevlin96.github.io/portfolio/educamps/index.html">EduCamps</a>
               </h4>
               <p class="card-text">Website detailing a children's educational camp. Created in a team for Web Programming course.</p>
             </div>
@@ -89,7 +89,7 @@
             <a href="#"><img class="card-img-top" src="images/lace.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/lacemarket/index.html">Lacemarket</a>
+                <a href="https://mdevlin96.github.io/portfolio/lacemarket/index.html">Lacemarket</a>
               </h4>
               <p class="card-text">Redesigned clothing sale landing page to be responsive. Creating during Keztra internship.</p>
             </div>
@@ -100,7 +100,7 @@
             <a href="#"><img class="card-img-top" src="images/hssv1.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="https://github.com/mdevlin96/portfolio/hssv/index.html">Humane Society</a>
+                <a href="hhttps://mdevlin96.github.io/portfolio/hssv/index.html">Humane Society</a>
               </h4>
               <p class="card-text">Redesigned HSSV cat adoption page to be responsive and more minimal. Created during Keztra internship.</p>
             </div>
