--- a/enviro/index.html
+++ b/enviro/index.html
@@ -87,7 +87,7 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <img class="img-responsive" src="images/birbs.png" alt="image">
+                <img class="img-responsive" src="birbs.png" alt="image">
             </div>
         </div>
         <!-- /.row -->
@@ -96,12 +96,12 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/deer.png" alt="image">
+                <img class="img-circle img-responsive img-center" src="deer.png" alt="image">
                 <h2 class="center">Friendly Deer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/salamander.png" alt="image">
+                <img class="img-circle img-responsive img-center" src="salamander.png" alt="image">
                 <h2 class="center">Salamander</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
