--- a/main/index.html
+++ b/main/index.html
@@ -78,7 +78,7 @@
             <a href="#"><img class="card-img-top" src="images/educamps.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="hhttps://mdevlin96.github.io/portfolio/educamps/index.html">EduCamps</a>
+                <a href="hhttps://mdevlin96.github.io/portfolio/educamps/homeindex.html">EduCamps</a>
               </h4>
               <p class="card-text">Website detailing a children's educational camp. Created in a team for Web Programming course.</p>
             </div>
@@ -100,7 +100,7 @@
             <a href="#"><img class="card-img-top" src="images/hssv1.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="hhttps://mdevlin96.github.io/portfolio/hssv/index.html">Humane Society</a>
+                <a href="https://mdevlin96.github.io/portfolio/hssv/index.html">Humane Society</a>
               </h4>
               <p class="card-text">Redesigned HSSV cat adoption page to be responsive and more minimal. Created during Keztra internship.</p>
             </div>
