--- a/scvbc-site/index.html
+++ b/scvbc-site/index.html
@@ -47,13 +47,13 @@
         
         <ul class="nav navbar-nav">
 
-        <li><a href="index.html">Home</a></li>
+        <li><a href="scvbc-site/index.html">Home</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="scvbc-site/calendar.html">Calendar</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Volunteering</a></li>
         <li><a href="#">Donate</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="scvbc-site/contact.html">Contact</a></li>
 
       </ul>
       
