--- a/scvbc-site/index.html
+++ b/scvbc-site/index.html
@@ -47,7 +47,7 @@
         
         <ul class="nav navbar-nav">
 
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="/calendar.html">Calendar</a></li>
         <li><a href="#">News</a></li>
