--- a/scvbc-site/index.html
+++ b/scvbc-site/index.html
@@ -79,6 +79,7 @@
 
     
  <div class="jumbotron jumbotron-fluid">
+   <img src="images/eyeball.png></img>
   <div class="container text-right">
     <h1>Welcome</h1>
     <h2>Santa Clara Valley Blind Center</h2>
