--- a/enviro/index.html
+++ b/enviro/index.html
@@ -63,7 +63,7 @@
 
     <!-- Image Background Page Header -->
     <header class="business-header" "img-responsive">
-        <img src="images/banner.png"></img>
+        <img src="banner.png"></img>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
