--- a/main/index.html
+++ b/main/index.html
@@ -67,6 +67,20 @@
           </div>
         </div>
     </div>
+      
+    <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/svbc.jpg" alt="image"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="https://mdevlin96.github.io/portfolio/globulear-home/index.html">Globaleur- Home</a>
+              </h4>
+              <p class="card-text">Landing page for travel web app. Created alongside web designers and software engineers.</p>
+            </div>
+          </div>
+        </div>
+    </div>
           
     <h2>Projects 2016 and Earlier</h2>
     <br>
