--- a/globulear-home/index.html
+++ b/globulear-home/index.html
@@ -31,11 +31,11 @@
                 
                 <ul class="min">
                     <li class="logo1">
-                        <a href="#"><img src="/images/logotype.png"></a>
+                        <a href="#"><img src="images/logotype.png"></a>
                     </li>
                     <span>
                         <li class="dropdown">
-                            <a href="#"><img src="/images/menu.png"></a>
+                            <a href="#"><img src="images/menu.png"></a>
                             <div class="dropdown-content">
                                 <a href="#">Home</a>
                                 <a href="#">Discover</a>
@@ -58,16 +58,16 @@
 
             <div class="container">
                 <div class="w3-quarter">
-                  <img src="/images/sf.jpg" alt="sf">
+                  <img src="images/sf.jpg" alt="sf">
                 </div>
                 <div class="w3-quarter">
-                  <img src="/images/nyc.jpg" alt="nyc">
+                  <img src="images/nyc.jpg" alt="nyc">
                 </div>
                 <div class="w3-quarter">
-                  <img src="/images/la.jpg" alt="la">
+                  <img src="images/la.jpg" alt="la">
                 </div>
                 <div class="w3-quarter">
-                  <img src="/images/lv.jpg" alt="lv">
+                  <img src="images/lv.jpg" alt="lv">
                 </div>
             </div>
         </div>
