--- a/main/index.html
+++ b/main/index.html
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/svbc.jpg" alt="image"></a>
+            <a href="#"><img class="card-img-top" src="images/home.jpg" alt="image"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://mdevlin96.github.io/portfolio/globulear-home/index.html">Globaleur- Home</a>
