--- a/scvbc-site/index.html
+++ b/scvbc-site/index.html
@@ -53,7 +53,7 @@
         <li><a href="#">News</a></li>
         <li><a href="#">Volunteering</a></li>
         <li><a href="#">Donate</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="mdevlin96.github.io/portfolio/scvbc-site/contact.html">Contact</a></li>
 
       </ul>
       
